--- a/trunk/client/company-profile.html
+++ b/trunk/client/company-profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Company Profile - SGX</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="shortcut icon" href="img/sgxPortal.ico">
     <script src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
@@ -22,9 +22,13 @@
             <div class="grid_3">
                 <div class="page-title">ABC Financial Corp. (ABC)</div>
                 <div class="stock-price">
-                    <div class="main">S$ 10.06 <span class="change">+0.02</span>
+                    <div class="main">S$ 10.06
+                        <span class="change">+0.02</span>
                     </div>
-                    <div class="last-updated">Last Price: <span class="date">22/Jan/2014 <span class="time">13:25 SGT</span></span>
+                    <div class="last-updated">Last Price:
+                        <span class="date">22/Jan/2014
+                            <span class="time">13:25 SGT</span>
+                        </span>
                     </div>
                 </div>
                 <div class="breadcrumb">
@@ -33,7 +37,8 @@
                         <li>Industry Tree:</li>
                         <li><a href="#">Financials</a> &gt;</li>
                         <li><a href="#">Banking and Finance</a> &gt;</li>
-                        <li><a href="#">Retail Banks</a></li>
+                        <li><a href="#">Retail Banks</a>
+                        </li>
                     </ul>
                     <div class="right-nav">
                         <div class="print-button">Print</div>
@@ -93,7 +98,7 @@
                     </div>
                     <p class="centered">Consensus Recommendation</p>
                     <div class="bar-container">
-                        <ul class="progress-mask theme-three-bubble-progress">
+                        <ul class="progress-mask theme-three-bubble-progress progress-1">
                             <li>
                                 <span href="">Sell</span>
                             </li>
@@ -104,7 +109,6 @@
                                 <span href="">Buy</span>
                             </li>
                         </ul>
-                        <div class="progress prog-60"></div>
                     </div>
                     <hr>
                     <p class="centered">
@@ -136,40 +140,40 @@
                             <table cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td width="25%">Open Price</td>
+                                        <td width="25%">-</td>
+                                        <td width="25%">Average 3-month Volume</td>
+                                        <td width="25%">-</td>
                                     </tr>
                                     <tr>
                                         <td>High/Low</td>
-                                        <td>$27.46 - $34.81</td>
+                                        <td>-</td>
                                         <td>Shares Outstanding</td>
-                                        <td>11,843,779</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>Volume</td>
-                                        <td>1,284,334</td>
+                                        <td>-</td>
                                         <td>Float %</td>
-                                        <td>84%</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>Open Price</td>
-                                        <td>#32.55</td>
+                                        <td>-</td>
                                         <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>Open Price</td>
-                                        <td>#32.55</td>
+                                        <td>-</td>
                                         <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
                                         <td>Open Price</td>
-                                        <td>#32.55</td>
+                                        <td>-</td>
                                         <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>-</td>
                                     </tr>
                                     </tobdy>
                             </table>
@@ -179,40 +183,16 @@
                             <table cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Price/Book Value</td>
+                                        <td>-</td>
+                                        <td>P/E Ratio</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>High/Low</td>
-                                        <td>$27.46 - $34.81</td>
-                                        <td>Shares Outstanding</td>
-                                        <td>11,843,779</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Volume</td>
-                                        <td>1,284,334</td>
-                                        <td>Float %</td>
-                                        <td>84%</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Dividend Yield</td>
+                                        <td>-</td>
+                                        <td>EV/EBITDA</td>
+                                        <td>-</td>
                                     </tr>
                                     </tobdy>
                             </table>
@@ -222,40 +202,34 @@
                             <table cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Debt/EBITDA</td>
+                                        <td>-</td>
+                                        <td>Cap Ex</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>High/Low</td>
-                                        <td>$27.46 - $34.81</td>
-                                        <td>Shares Outstanding</td>
-                                        <td>11,843,779</td>
+                                        <td>Total Debt</td>
+                                        <td>-</td>
+                                        <td>EBIT</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>Volume</td>
-                                        <td>1,284,334</td>
-                                        <td>Float %</td>
-                                        <td>84%</td>
+                                        <td>Enterprise Value</td>
+                                        <td>-</td>
+                                        <td>Total Revenue</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Total Assets</td>
+                                        <td>-</td>
+                                        <td>Net Income</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Cash &amp; ST Investments</td>
+                                        <td>-</td>
+                                        <td>EBITDA</td>
+                                        <td>-</td>
                                     </tr>
                                     </tobdy>
                             </table>
@@ -265,40 +239,16 @@
                             <table cellspacing="0">
                                 <tbody>
                                     <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>Top 5 owners by shares held</td>
+                                        <td>-</td>
+                                        <td>number of shared held</td>
+                                        <td>-</td>
                                     </tr>
                                     <tr>
-                                        <td>High/Low</td>
-                                        <td>$27.46 - $34.81</td>
-                                        <td>Shares Outstanding</td>
-                                        <td>11,843,779</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Volume</td>
-                                        <td>1,284,334</td>
-                                        <td>Float %</td>
-                                        <td>84%</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Open Price</td>
-                                        <td>#32.55</td>
-                                        <td>Average 3-month Volume</td>
-                                        <td>2,407,384</td>
+                                        <td>% of common stock</td>
+                                        <td>-</td>
+                                        <td></td>
+                                        <td></td>
                                     </tr>
                                     </tobdy>
                             </table>
@@ -311,13 +261,9 @@
                         <div class="label">Company Description</div>
                     </div>
                     <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-                            eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis
-                            pretium.
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
                         </p>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-                            eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis
-                            pretium.
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
                         </p>
                     </div>
                 </div>
